Changing ios textbox look'

--- a/public/index.html
+++ b/public/index.html
@@ -46,11 +46,11 @@
 
         var messages = [
           'Hi there, looks like you met Paul',
-          'Welcome. I\'m AI that makes it WAY easier to meet up with people',
+          'Welcome. I\'m AI that makes it WAY <br /> easier to meet up with people',
           'Finally, right?',
-          'It starts with anonymous texting..bc not everyone should have your number forever',
-          'Every number is hidden and names are optional. Obviously.',
-          'Cool? Let\'s get your number and the ball rolling with Paul!',
+          'It starts with anonymous texting..bc <br /> not everyone should have your number forever',
+          'Every number is hidden <br />and names are optional. Obviously.',
+          'Cool? Let\'s get your number and <br /> the ball rolling with Paul!',
           'Another Statement',
           'Another Statement 2'
         ];
