--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
   <body class="blue">
     <div id="root">
     	<div class="landing-page">
-
+        <input style="display:none;" type="hidden" id="ref" name="ref" value="">
     		<header>
     			<div class="left">
     				<div class="logo-icon">
 	    				<img src="./images/ic_meetable_icon.svg" alt="copyright logo" />
 	    			</div>
     			</div>
-    			
+
     			<div class="right">
 	    			<div class="invited-by">
 	    				<p>Invited By Paul</p>
@@ -40,7 +40,7 @@
     			</div>
 
     			<div class="slogan-text">
-    				<p>Text new people anonymously</p> 
+    				<p>Text new people anonymously</p>
     			</div>
     		</section>
 
@@ -67,7 +67,7 @@
     			</p>
 
     			<p class="smallerText terms-of-service hidden">
-    				By tapping "go", you agree to our <br /><a href="/termsofservice" id="terms-link" target="_blank">terms of service</a> and <a href="/privacypolicy" id="privacy-link" target="_blank">privacy policy.</a>
+    				By tapping "go", you agree to our <br /><a href="/termsofservice" id="terms-link" target="_blank" onclick="return false;">terms of service</a> and <a href="/privacypolicy" id="privacy-link" target="_blank" onclick="return false;">privacy policy.</a>
     			</p>
     		</section>
 
@@ -158,6 +158,13 @@
     			$('#terms-text').addClass('hidden');
     			$('.bottom-btns').removeClass('hidden');
     			//$('.copyright .left').addClass('hidden');
+          var ref = $('input#ref').val();
+          var xhr = new XMLHttpRequest();
+          xhr.open("POST", "https://meetable-api.herokuapp.com/meetings/" + ref + "/accept", true);
+          xhr.setRequestHeader('Content-Type', 'application/json');
+          xhr.send(JSON.stringify({
+                phone_number: phoneNumber
+          }));
     			$('.slogan-text p').text('Hello text sent to ' + phoneNumber);
     			$('#welcome-area').removeClass('hidden');
 			} else {
@@ -170,12 +177,20 @@
 
 			if(phoneNumber.match(regEx)) {
 			    return true;
-			}  
+			}
 
 			return false;
 		}
     </script>
+    <script type="text/javascript">
+      var url_string = window.location.href;
+      var url = new URL(url_string);
+      var m = url.searchParams.get("invite");
+      //var parts = url_string.split('/');
+      //var m = parts.pop() || parts.pop();
+      $('#ref').val(m);
 
+    </script>
 
   </body>
 </html>
