--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
     		<section id="terms-text" class="hidden">
     			<p class="smallerText private-number">
-    				Numbers are linked anonymously via SMS, but never <br /> shared. And we don’t update your name
+    				Numbers are linked anonymously via SMS, but never shared. And we don’t update your name
     			</p>
 
     			<p class="smallerText terms-of-service hidden">
@@ -72,7 +72,12 @@
     		</section>
 
     		<section id="welcome-area" class="hidden">
-    			<h2>Welcome</h2>
+    			<p>
+                    You’re in!  🚀 <br />
+                    Texts incoming  👆 <br />
+                    Save that contact card  ✅ <br />
+                    Text your mystery friend  👌 <br />
+                </p>
     		</section>
 
 			<div class="copyright">
