--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,11 @@
 
       $(document).ready(function(){
 
+        //Tap to compose
+        $('.tap-to-compose-btn').click(function(){
+          var relayNumber = '2342342324';
+        });
+
         // InviteeLP & HP State 2
         $('.get-started-btn').click(function() {
           $(this).hide();
