--- a/public/index.html
+++ b/public/index.html
@@ -148,7 +148,7 @@
 
           var sURL = window.location.pathname.replace("/", "");
           if(sURL)  {
-            $.getJSON( "http://meetable-api.herokuapp.com/meetings/"+ sURL +"/genrelay", function(data) {
+            $.getJSON( "https://meetable-api.herokuapp.com/meetings/"+ sURL +"/genrelay", function(data) {
               console.log( data.relay_number );
               if(data.relay_number) {
                 $('.sms-link').attr('href', 'sms:' + data.relay_number);
